fixed width when there is too many links on mobile

--- a/css/portfolio-elements.css
+++ b/css/portfolio-elements.css
@@ -63,6 +63,7 @@
 }
 
 .portfolioRow {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -74,6 +75,16 @@
   margin-right: 5px;
   margin-left: 5px;
   font-size: 20px;
+}
+
+@media only screen and (max-width: 640px) {
+  .portfolioColumn {
+    flex-direction: column;
+  }
+  
+  .portfolioColumn button {
+    margin-bottom: 10px;
+  }
 }
 
 @media only screen and (min-width: 640px) {
